added configuration INI file support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ option(OXYLUS_ENABLE_OpenMP "Enable use of OpenMP" on)
 
 ## Ensure that all binaries are stored in the same directory (usually build/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 ## All external libraries should be checked only once
@@ -33,3 +34,9 @@ add_subdirectory (src)
 ## Also build unit tests
 # enable_testing ()
 # add_subdirectory (test)
+IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
+  EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
+    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
+  )
+ENDIF()
