cell templated implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ set( OXYLUS_LIBRARIES "")
 add_subdirectory (memory)
 add_subdirectory (image)
 add_subdirectory (configuration)
+add_subdirectory (training)
 
 set_property(GLOBAL PROPERTY oxylus_libs_property "${OXYLUS_LIBRARIES}")
 
